@@ -1,3 +1,9 @@
+2010-02-24 Borut Razem <borut.razem AT siol.net>
+
+	* sdcc/support/scripts/as2gbmap.py:
+	  sort symbols by value for rrgb outout,
+	  handle file open errors
+
 2010-02-23 Borut Razem <borut.razem AT siol.net>
 
 	* src/SDCCmain.c, src/z80/main.c, sdas/linksrc/lkdata.c,
